--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "underscore": ">=1.1.x",
-    "underscore-query": ">=1.3.x"
+    "underscore-query": ">=1.3.x",
+    "mustache": "latest"
   },
   "node-red": {
     "nodes": {
